--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pioneer Bank</title>
+    <title>My Bank</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="login-area">
-        <h1 class="bank-title">Welcome to Pioneer Bank</h1>
+        <h1 class="bank-title">Welcome to My Bank</h1>
         <div class="submit-area">
             <h4>Login</h4>
             <input type="text" class="form-control" placeholder="name">
@@ -25,14 +25,14 @@
         <div class="row">
             <div class="col-md-4 ">
                 <div class="deposit status">
-                    <h5>Deposite</h5>
+                    <h5>Deposit</h5>
                     <h2>$ <span id="currentDeposit">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4 ">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4 ">
